Add animation triggers Add start of particle system

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Assets\Scripts\Configs\ConfigLocationsLoader.cs" />
     <Compile Include="Assets\Scripts\Scene\LocationButton.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigSoundsLoader.cs" />
+    <Compile Include="Assets\Scripts\Particle\Particle.cs" />
     <Compile Include="Assets\Scripts\AnimationSequence\ActorAnimSequence.cs" />
     <Compile Include="Assets\Scripts\AnimationSequence\PropAnimSequence.cs" />
     <Compile Include="Assets\Scripts\Cocos3D\CocosModel.cs" />
