--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Assets\Scripts\Player\PlayerManager.cs" />
     <Compile Include="Assets\Scripts\3DModels\BoneTransform.cs" />
     <Compile Include="Assets\Scripts\Predicate\PredOperators.cs" />
+    <Compile Include="Assets\Scripts\UI\FocusUI.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigLocationsLoader.cs" />
     <Compile Include="Assets\Scripts\Scene\LocationButton.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigSoundsLoader.cs" />
@@ -192,6 +193,7 @@
     <Compile Include="Assets\Scripts\Player\CustomizeAvatarPreviewImages.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigProjectLoader.cs" />
     <Compile Include="Assets\Scripts\3DModels\Model.cs" />
+    <Compile Include="Assets\Scripts\Mods\ModLoader.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigSceneLoader.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionScenarioTransition.cs" />
     <Compile Include="Assets\Scripts\Objectives\ObjectiveDialogueComplete.cs" />
@@ -211,7 +213,6 @@
     <Compile Include="Assets\Scripts\Camera\SimpleCameraController.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentNose.cs" />
     <Compile Include="Assets\Scripts\Animation\AnimationTest.cs" />
-    <Compile Include="Assets\Scripts\UI\FocusUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
