--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,7 +47,7 @@
   <PropertyGroup>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UnityProjectGenerator>Package</UnityProjectGenerator>
-    <UnityProjectGeneratorVersion>2.0.15</UnityProjectGeneratorVersion>
+    <UnityProjectGeneratorVersion>2.0.16</UnityProjectGeneratorVersion>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2021.3.4f1</UnityVersion>
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\ModelViewerScreenShot.cs" />
+    <Compile Include="Assets\Scripts\UI\CanvasImageLoader.cs" />
     <Compile Include="Assets\Scripts\Actors\ActorText.cs" />
     <Compile Include="Assets\Scripts\Graduation\GraduationUI.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentHands.cs" />
@@ -134,6 +135,7 @@
     <Compile Include="Assets\Scripts\Configs\Configs.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigLocalDataLoader.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionGoalDialog.cs" />
+    <Compile Include="Assets\Scripts\UI\CCDisplay.cs" />
     <Compile Include="Assets\Scripts\Prop\Prop.cs" />
     <Compile Include="Assets\Scripts\Predicate\PredFunctions.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionLocationHubButton.cs" />
@@ -168,6 +170,7 @@
     <Compile Include="Assets\Scripts\Predicate\Predicate.cs" />
     <Compile Include="Assets\Scripts\Player\Player.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionSwipeSortQTE.cs" />
+    <Compile Include="Assets\Scripts\UI\ImageLoader.cs" />
     <Compile Include="Assets\Scripts\Menu\MenuBackgroundChristmas.cs" />
     <Compile Include="Assets\Scripts\Menu\MenuBackgroundHalloween.cs" />
     <Compile Include="Assets\Scripts\Goals\Goalchain.cs" />
@@ -183,6 +186,7 @@
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentTop.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigCharactersLoader.cs" />
     <Compile Include="Assets\Scripts\Cocos3D\C3B.cs" />
+    <Compile Include="Assets\Scripts\UI\MatImageLoader.cs" />
     <Compile Include="Assets\Scripts\Actors\ActorController.cs" />
     <Compile Include="Assets\Scripts\Scene\LocationHubMenu.cs" />
     <Compile Include="Assets\Scripts\GameStart.cs" />
@@ -213,6 +217,7 @@
     <Compile Include="Assets\Scripts\Objectives\ObjectiveY1C1P6Complete.cs" />
     <Compile Include="Assets\Scripts\Camera\SimpleCameraController.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentNose.cs" />
+    <Compile Include="Assets\Scripts\3DModels\ShadowDecider.cs" />
     <Compile Include="Assets\Scripts\Animation\AnimationTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -907,11 +912,14 @@
     <Reference Include="Unity.Searcher.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Searcher.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Runtime">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+    <Reference Include="Unity.2D.Sprite.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.2D.Sprite.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.HighDefinition.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.HighDefinition.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.Runtime">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
