--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentBrows.cs" />
     <Compile Include="Assets\Scripts\Dialogue\LocalData.cs" />
     <Compile Include="Assets\Scripts\Player\CustomizeAvatar.cs" />
+    <Compile Include="Assets\Scripts\Scenario\Tappie.cs" />
     <Compile Include="Assets\Scripts\Objectives\ObjectiveVisitLocation.cs" />
     <Compile Include="Assets\Scripts\Objectives\Objective.cs" />
     <Compile Include="Assets\Scripts\Menu\MenuBackgroundQuidditch.cs" />
