Add effects to eyeballshader

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentOnePiece.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentBrows.cs" />
     <Compile Include="Assets\Scripts\Dialogue\LocalData.cs" />
+    <Compile Include="Assets\Scripts\UI\ScreenFade.cs" />
     <Compile Include="Assets\Scripts\Player\CustomizeAvatar.cs" />
     <Compile Include="Assets\Scripts\Scenario\Tappie.cs" />
     <Compile Include="Assets\Scripts\Objectives\ObjectiveVisitLocation.cs" />
