Add dating encounters Add a dating menu Some menu cleanup

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Assets\Scripts\Menu\IMenuBackground.cs" />
     <Compile Include="Assets\Scripts\Objectives\ObjectiveRepeatableMatchComplete.cs" />
     <Compile Include="Assets\Scripts\Events\Events.cs" />
+    <Compile Include="Assets\Scripts\UI\CompanionSelectUI.cs" />
     <Compile Include="Assets\Scripts\UI\GoalPopup.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentTop.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigCharactersLoader.cs" />
