--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Assets\Scripts\Configs\ConfigInteractionLoader.cs" />
     <Compile Include="Assets\Scripts\GlobalEngineVariables.cs" />
     <Compile Include="Assets\Scripts\Player\CustomizableAvatarSpawner.cs" />
+    <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionFastTap.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentOnePiece.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentBrows.cs" />
     <Compile Include="Assets\Scripts\Dialogue\LocalData.cs" />
@@ -222,6 +223,7 @@
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentNose.cs" />
     <Compile Include="Assets\Scripts\3DModels\ShadowDecider.cs" />
     <Compile Include="Assets\Scripts\Animation\AnimationTest.cs" />
+    <Compile Include="Assets\Scripts\Console.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
