--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\Scripts\Objectives\ObjectiveMatchComplete.cs" />
     <Compile Include="Assets\Scripts\Events\EventManager.cs" />
     <Compile Include="Assets\Scripts\UI\LoadingScreenCanvas.cs" />
+    <Compile Include="Assets\Scripts\3DModels\ModelLoading\MatrixOperations.cs" />
     <Compile Include="Assets\Scripts\Player\CustomizeAvatarGroup.cs" />
     <Compile Include="Assets\Scripts\Player\AvatarComponents.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionExit.cs" />
@@ -200,6 +201,7 @@
     <Compile Include="Assets\Scripts\Cocos3D\C3B.cs" />
     <Compile Include="Assets\Scripts\UI\MatImageLoader.cs" />
     <Compile Include="Assets\Scripts\Actors\ActorController.cs" />
+    <Compile Include="Assets\Scripts\3DModels\ModelLoading\ModelMaterials.cs" />
     <Compile Include="Assets\Scripts\Scene\LocationHubMenu.cs" />
     <Compile Include="Assets\Scripts\GameStart.cs" />
     <Compile Include="Assets\Scripts\Cocos3D\C3T.cs" />
@@ -232,40 +234,29 @@
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentNose.cs" />
     <Compile Include="Assets\Scripts\3DModels\ModelLoading\ShadowDecider.cs" />
     <Compile Include="Assets\Scripts\Animation\AnimationTest.cs" />
-    <Compile Include="Assets\Scripts\3DModels\ModelLoading\MatrixOperations.cs" />
-    <Compile Include="Assets\Scripts\3DModels\ModelLoading\ModelMaterials.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\Resources\Shaders\CustomShaders\neweyeshader\LitProperties.hlsl" />
-    <None Include="Assets\Resources\Shaders\CustomShaders\skinshader\skinshader.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
+    <None Include="Assets\Hlsl\skinshader.hlsl" />
     <None Include="Assets\Resources\RenderTextures\ui_remove_depth.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\Resources\Shaders\CustomShaders\neweyeshader\LitData.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\Resources\Shaders\CustomShaders\neweyeshader\neweyeshader.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
-    <None Include="Assets\Resources\Shaders\CustomShaders\clothshader\LitData.hlsl" />
-    <None Include="Assets\Resources\Shaders\CustomShaders\clothshader\LitProperties.hlsl" />
-    <None Include="Assets\Resources\Shaders\CustomShaders\skinshader\LitDataIndividualLayer.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
-    <None Include="Assets\Resources\Shaders\CustomShaders\clothshader\skinshader.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\Resources\Shaders\CustomShaders\neweyeshader\LitDataIndividualLayer.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
-    <None Include="Assets\Resources\Shaders\CustomShaders\skinshader\skinshader.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
-    <None Include="Assets\Resources\Shaders\CustomShaders\skinshader\LitProperties.hlsl" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
-    <None Include="Assets\Resources\Shaders\CustomShaders\skinshader\LitData.hlsl" />
-    <None Include="Assets\Resources\Shaders\CustomShaders\clothshader\clothshader.shader" />
-    <None Include="Assets\Resources\Shaders\CustomShaders\clothshader\LitDataIndividualLayer.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
