Multiple sequential event players

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -240,6 +240,7 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\Resources\Shaders\CustomShaders\neweyeshader\LitProperties.hlsl" />
+    <None Include="Assets\Hlsl\neweyes.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\Hlsl\skinshader.hlsl" />
     <None Include="Assets\Resources\RenderTextures\ui_remove_depth.shader" />
