Added quiz minigames

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Assets\Scripts\Scene\SceneLight.cs" />
     <Compile Include="Assets\Scripts\Encounter\Encounter.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentGlasses.cs" />
+    <Compile Include="Assets\Scripts\UI\QuizUI.cs" />
     <Compile Include="Assets\Scripts\Player\ComponentButton.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionFocus.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentNeckwear.cs" />
@@ -235,6 +236,7 @@
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentNose.cs" />
     <Compile Include="Assets\Scripts\3DModels\ModelLoading\ShadowDecider.cs" />
     <Compile Include="Assets\Scripts\Animation\AnimationTest.cs" />
+    <Compile Include="Assets\Scripts\UI\QuizUIButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
