--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -113,7 +113,7 @@
     <Compile Include="Assets\Scripts\Goals\Goal.cs" />
     <Compile Include="Assets\Scripts\Debugger.cs" />
     <Compile Include="Assets\Scripts\Scene\SceneLight.cs" />
-    <Compile Include="Assets\Scripts\Encounter\Encounter.cs" />
+    <Compile Include="Assets\Scripts\Encounter\EncounterDate.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentGlasses.cs" />
     <Compile Include="Assets\Scripts\UI\QuizUI.cs" />
     <Compile Include="Assets\Scripts\Player\ComponentButton.cs" />
@@ -237,6 +237,7 @@
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentNose.cs" />
     <Compile Include="Assets\Scripts\3DModels\ModelLoading\ShadowDecider.cs" />
     <Compile Include="Assets\Scripts\Animation\AnimationTest.cs" />
+    <Compile Include="Assets\Scripts\Encounter\EncounterSocial.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
