--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Assets\Scripts\Quidditch.cs" />
     <Compile Include="Assets\Scripts\Objectives\ObjectiveSocialEncounterComplete.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentArms - Copy.cs" />
+    <Compile Include="Assets\Scripts\Menu\MenuBackgroundHalloween2022.cs" />
     <Compile Include="Assets\Scripts\Cocos3D\c3bLoader.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigEncounterLoader.cs" />
     <Compile Include="Assets\Scripts\3DModels\ModelInspector.cs" />
@@ -252,6 +253,8 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\Resources\Shaders\CustomShaders\neweyeshader\neweyeshader.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\Resources\Animations\MCHalloween2022.txt" />
+    <None Include="Assets\Resources\Animations\JaneHalloween2022.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
@@ -269,6 +272,7 @@
     <None Include="Assets\Resources\Blackboard\Blackboard_Empty_v3@4x.txt" />
     <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
+    <None Include="Assets\Resources\Animations\MerulaHalloween2022.txt" />
     <None Include="Assets\Resources\Shaders\CustomShaders\neweyeshader\neweyeshader.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
   </ItemGroup>
