--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -249,11 +249,14 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\Hlsl\skin.hlsl" />
     <None Include="Assets\Resources\RenderTextures\ui_remove_depth.shader" />
+    <None Include="Assets\Hlsl\panningb_vfx.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
+    <None Include="Assets\Hlsl\simpletexture.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\Resources\Animations\MCHalloween2022.txt" />
     <None Include="Assets\Resources\Animations\JaneHalloween2022.txt" />
+    <None Include="Assets\Hlsl\panningbfresnel_vfx.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
