--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -16,6 +16,9 @@ scopes = {
 	"last_search.2138236A" = "postproce"
 	"OpenInspectorPreview.2138236A" = "0"
 	"currentGroup.2138236A" = "asset"
+	"last_search.F8949528" = ""
+	"OpenInspectorPreview.F8949528" = "0"
+	"currentGroup.F8949528" = "all"
 }
 providers = {
 	asset = {
