More updates to smooth anims

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Assets\Scripts\Menu\MenuBackgroundYear1.cs" />
     <Compile Include="Assets\Scripts\Quidditch.cs" />
     <Compile Include="Assets\Scripts\Objectives\ObjectiveSocialEncounterComplete.cs" />
+    <Compile Include="Assets\Scripts\TimedPromo.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentArms.cs" />
     <Compile Include="Assets\Scripts\Menu\MenuBackgroundHalloween2022.cs" />
     <Compile Include="Assets\Scripts\Cocos3D\c3bLoader.cs" />
