New Christmas menu

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Assets\Scripts\Animation\ShaderAnimation.cs" />
     <Compile Include="Assets\Scripts\UI\FocusUI.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigLocationsLoader.cs" />
+    <Compile Include="Assets\Scripts\Menu\MenuBackgroundChristmas2022.cs" />
     <Compile Include="Assets\Scripts\Scene\LocationButton.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigSoundsLoader.cs" />
     <Compile Include="Assets\Scripts\Particle\Particle.cs" />
