Added pan2directions_vfx, transitionstaticfade_vfx and shadowplane_vfx shaders

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -257,12 +257,14 @@
     <None Include="Assets\Hlsl\simpletexture.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\Resources\Animations\MCHalloween2022.txt" />
+    <None Include="Assets\Hlsl\shadowplane_vfx.hlsl" />
     <None Include="Assets\Resources\Animations\JaneHalloween2022.txt" />
     <None Include="Assets\Hlsl\panningbfresnel_vfx.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
+    <None Include="Assets\Hlsl\pan2directions_vfx.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\Hlsl\invisibility_vfx.hlsl" />
@@ -272,6 +274,7 @@
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\Hlsl\eyeball.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
+    <None Include="Assets\Hlsl\transitionstaticfade_vfx.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
     <None Include="Assets\Resources\Blackboard\Blackboard_Empty_v3@4x.txt" />
