--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentNeckwear.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionProject.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionOptional.cs" />
+    <Compile Include="Assets\Scripts\Particle\PUParticle.cs" />
     <Compile Include="Assets\Scripts\PostProcess.cs" />
     <Compile Include="Assets\Scripts\Project\Project.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionBubble.cs" />
@@ -139,6 +140,7 @@
     <Compile Include="Assets\Scripts\Actors\Actor.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigDialoguesLoader.cs" />
     <Compile Include="Assets\Scripts\Encounter\EncounterManager.cs" />
+    <Compile Include="Assets\Scripts\Particle\PUParticleSpawner.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentRightWrist.cs" />
     <Compile Include="Assets\Scripts\UI\GraphicsSettings.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentBottom.cs" />
