--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -264,6 +264,7 @@
     <None Include="Assets\Hlsl\simpletexture.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\Resources\Animations\MCHalloween2022.txt" />
+    <None Include="Assets\Hlsl\worldpanalpha_vfx.hlsl" />
     <None Include="Assets\Hlsl\shadowplane_vfx.hlsl" />
     <None Include="Assets\Resources\Animations\JaneHalloween2022.txt" />
     <None Include="Assets\Hlsl\panningbfresnel_vfx.hlsl" />
