--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -268,6 +268,7 @@
     <None Include="Assets\Hlsl\shadowplane_vfx.hlsl" />
     <None Include="Assets\Resources\Animations\JaneHalloween2022.txt" />
     <None Include="Assets\Hlsl\panningbfresnel_vfx.hlsl" />
+    <None Include="Assets\Hlsl\transitionstaticfadeemissive_vfx.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
