Added TurnHeadTowards event and rename events script to eventactions

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -207,7 +207,7 @@
     <Compile Include="Assets\Scripts\AnimationSequence\AnimationSequenceActions.cs" />
     <Compile Include="Assets\Scripts\Menu\IMenuBackground.cs" />
     <Compile Include="Assets\Scripts\Objectives\ObjectiveRepeatableMatchComplete.cs" />
-    <Compile Include="Assets\Scripts\Events\Events.cs" />
+    <Compile Include="Assets\Scripts\Events\EventActions.cs" />
     <Compile Include="Assets\Scripts\UI\QuizUIButton.cs" />
     <Compile Include="Assets\Scripts\UI\CompanionSelectUI.cs" />
     <Compile Include="Assets\Scripts\UI\GoalPopup.cs" />
