Add reference tree for resource analysis and unimplement script event warnings

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Assets\Scripts\Interaction\Interaction.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentHair.cs" />
     <Compile Include="Assets\Scripts\Configs\Configs.cs" />
+    <Compile Include="Assets\Scripts\Game\ReferenceTree.cs" />
     <Compile Include="Assets\Scripts\Configs\ConfigLocalDataLoader.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionGoalDialog.cs" />
     <Compile Include="Assets\Scripts\UI\CCDisplay.cs" />
