Added playable assignments Objective keys aren't removed after being completed, the can be done multiple times

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Assets\Scripts\Events\EventManager.cs" />
     <Compile Include="Assets\Scripts\UI\LoadingScreenCanvas.cs" />
     <Compile Include="Assets\Scripts\Particle\PUMaterial.cs" />
+    <Compile Include="Assets\Scripts\Assignment\Assignment.cs" />
     <Compile Include="Assets\Scripts\3DModels\ModelLoading\MatrixOperations.cs" />
     <Compile Include="Assets\Scripts\Player\CustomizeAvatarGroup.cs" />
     <Compile Include="Assets\Scripts\Player\AvatarComponents.cs" />
@@ -94,6 +95,7 @@
     <Compile Include="Assets\Scripts\Player\CustomizableAvatarSpawner.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionFastTap.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentOnePiece.cs" />
+    <Compile Include="Assets\Scripts\Objectives\ObjectiveEarnParentProjectStars.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentBrows.cs" />
     <Compile Include="Assets\Scripts\Dialogue\LocalData.cs" />
     <Compile Include="Assets\Scripts\UI\ScreenFade.cs" />
@@ -162,6 +164,7 @@
     <Compile Include="Assets\Scripts\Animation\AnimationManager.cs" />
     <Compile Include="Assets\Scripts\3DModels\TestDirectionViewMatrix.cs" />
     <Compile Include="Assets\Scripts\Events\EventPlayer.cs" />
+    <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionMemoryMatchQTE.cs" />
     <Compile Include="Assets\Scripts\Objectives\ObjectiveFriendTutComplete.cs" />
     <Compile Include="Assets\Scripts\Menu\MenuBackgroundYear1.cs" />
     <Compile Include="Assets\Scripts\Game\Quidditch.cs" />
