--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Assets\Scripts\UI\QuizUI.cs" />
     <Compile Include="Assets\Scripts\Player\ComponentButton.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionFocus.cs" />
+    <Compile Include="Assets\Scripts\Game\Dorm.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentNeckwear.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionProject.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionOptional.cs" />
@@ -163,6 +164,7 @@
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionLocationHubButton.cs" />
     <Compile Include="Assets\Scripts\Animation\AnimationManager.cs" />
     <Compile Include="Assets\Scripts\3DModels\TestDirectionViewMatrix.cs" />
+    <Compile Include="Assets\Scripts\Configs\ConfigFurnitureLoader.cs" />
     <Compile Include="Assets\Scripts\Events\EventPlayer.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionMemoryMatchQTE.cs" />
     <Compile Include="Assets\Scripts\Objectives\ObjectiveFriendTutComplete.cs" />
