Added vertexdiffusergb and vertexdiffuse rgba

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -270,6 +270,7 @@
     <None Include="Assets\Hlsl\eyes.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\Hlsl\skin.hlsl" />
+    <None Include="Assets\Hlsl\vertexdiffusergba_vfx.hlsl" />
     <None Include="Assets\Resources\RenderTextures\ui_remove_depth.shader" />
     <None Include="Assets\Hlsl\panningb_vfx.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
@@ -292,6 +293,7 @@
     <None Include="Assets\Hlsl\invisibility_vfx.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
+    <None Include="Assets\Hlsl\vertexdiffusergb_vfx.hlsl" />
     <None Include="Assets\Hlsl\ubershader.hlsl" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\Hlsl\eyeball.hlsl" />
