Added betteranimateuvs_vfx shader

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -311,6 +311,7 @@
     <None Include="Assets\Hlsl\invisibility_vfx.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
+    <None Include="Assets\Hlsl\betteranimateuvs_vfx.hlsl" />
     <None Include="Assets\Battlehub\RTEditor\Content\Runtime\RTHandles\Shaders\Resources\VertexColorClipUsingClipPlane.shader" />
     <None Include="Assets\Hlsl\vertexdiffusergb_vfx.hlsl" />
     <None Include="Assets\Battlehub\RTEditor\Content\Runtime\RTHandles\Prefabs\Models\Materials\Shaders\SSQuadShader.shader" />
