--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -288,6 +288,7 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\Hlsl\simpletexture.hlsl" />
     <None Include="Assets\Battlehub\RTEditor\Content\Runtime\RTHandles\Prefabs\Models\Materials\Shaders\DepthMaskColorBillboardShader.shader" />
+    <None Include="Assets\Hlsl\twocolorglow_vfx.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\Resources\Animations\MCHalloween2022.txt" />
     <None Include="Assets\Hlsl\worldpanalpha_vfx.hlsl" />
