--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Assets\Scripts\Configs\ConfigInteractionLoader.cs" />
     <Compile Include="Assets\Scripts\Game\GlobalEngineVariables.cs" />
     <Compile Include="Assets\Scripts\Player\CustomizableAvatarSpawner.cs" />
+    <Compile Include="Assets\Scripts\Objectives\ObjectiveDuellingComplete.cs" />
     <Compile Include="Assets\Scripts\Interaction\InteractionTypes\InteractionFastTap.cs" />
     <Compile Include="Assets\Scripts\Player\IndividualComponents\ComponentOnePiece.cs" />
     <Compile Include="Assets\Scripts\Objectives\ObjectiveEarnParentProjectStars.cs" />
@@ -103,6 +104,7 @@
     <Compile Include="Assets\Scripts\UI\ScreenFade.cs" />
     <Compile Include="Assets\Scripts\Player\CustomizeAvatar.cs" />
     <Compile Include="Assets\Scripts\Scenario\Tappie.cs" />
+    <Compile Include="Assets\Scripts\Objectives\ObjectiveSocialEncounterSuccessCompanion.cs" />
     <Compile Include="Assets\Scripts\Objectives\ObjectiveVisitLocation.cs" />
     <Compile Include="Assets\Scripts\Animation\AnimationTriggers.cs" />
     <Compile Include="Assets\Scripts\Poser\Poser.cs" />
